<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_1"
        android:icon="@drawable/favorite_filled"
        app:showAsAction="ifRoom"
        android:iconTint="?colorPrimary"
        android:title="@string/menu1" />
    <item
        android:id="@+id/menu_2"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="ifRoom"
        android:iconTint="?colorPrimary"
        android:title="@string/menu2"/>
</menu>